--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,83 @@
 body {
-    color: rgb(255, 255, 255);
-    background-color: rgb(57, 58, 78);
+    color: rgb(0, 0, 0);
+    background-color: rgb(99, 101, 136);
+    font-family: sans-serif;
+    font-size: 16px;
+}
+
+#map {
+    width: 100vw;
+    height: 100vh;
+    background-color: #FFF;
+}
+
+.marker {
+    display: block;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 0;
+    width: 50px;
+    height: 40px;
+    background-size: 100%;
+    background-image: url(../assets/icons/bikeStation.svg);
+    background-repeat: no-repeat;
+}
+
+.bike-overlay {
+    position: absolute;
+    bottom: 0px;
+    height: 38vh;
+    width: 100vw;
+    background-color: #FFF;
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap: 24px;
+    padding: 10px;
+    color: #3d4851;
+}
+
+.bike-overlay h2 {
+    margin: 5px 0;
+    margin-block: 0; /*FIKSE DETTE*/
+}
+
+.StationTitle {
+    font-size: 1.4em;
+}
+.StationAddress {
+    font-size: 0.8em;
+}
+
+.smallergap {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap: 8px;
+}
+
+
+.hidden {
+    display: none;
+}
+
+.close-overlay {
+    width: 48px;
+    height: 8px;
+    top: 311px;
+    background: #a6a6a6;
+    border-radius: 10px;
+}
+
+.big-bike {
+    width: 78px;
+}
+
+
+.your-pos {
+    width: 76px;
+    height: 76px;
+    background-image: url(../assets/icons/myLocation.svg);
 }
